# BogCall

./: .gitignore  README.md
wetland-bioacoustics/: Makefile  README.md  pyproject.toml  requirements.txt
wetland-bioacoustics/configs/: default.yaml
wetland-bioacoustics/scripts/: download_data.py  export_onnx.py  prepare_labels.py
wetland-bioacoustics/src/: __init__.py  config.py  dataset.py  inference.py  metrics.py  model.py  preprocessing.py  train.py  utils.py
wetland-bioacoustics/tests/: test_inference.py  test_model.py  test_preprocessing.py
